--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^4.0.0",
+    "@fontsource/inter": "^5.0.4",
     "astro": "^2.7.2",
     "tailwindcss": "^3.0.24"
   }
