--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@fontsource/inter": "^5.0.4",
     "astro": "^2.7.2",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
