--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/inter": "^5.0.4",
+    "@fontsource/nunito": "^5.0.5",
     "astro": "^2.7.2",
     "tailwindcss": "^3.0.24"
   },
