--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.2",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/inter": "^5.0.4",
     "@fontsource/nunito": "^5.0.5",
-    "astro": "^2.7.2",
+    "astro": "^2.8.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
