--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource/inter": "^5.0.4",
     "@fontsource/nunito": "^5.0.5",
-    "astro": "^2.8.0",
+    "astro": "^2.10.1",
+    "motion": "^10.16.2",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
