--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/nunito": "^5.0.5",
     "astro": "^2.10.1",
     "motion": "^10.16.2",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
