--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/inter": "^5.0.8",
     "@fontsource/nunito": "^5.0.8",
     "astro": "^2.10.1",
+    "astro-icon": "^0.8.1",
     "motion": "^10.16.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
