--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^3.0.3",
     "astro-icon": "^0.8.1",
     "motion": "^10.16.2",
+    "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3"
   },
