--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.0.0",
-    "@astrojs/partytown": "^2.0.2",
-    "@astrojs/rss": "^4.0.0",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.3",
-    "@fontsource/inter": "^5.0.8",
-    "@fontsource/nunito": "^5.0.8",
-    "astro": "^4.0.2",
-    "astro-icon": "^0.8.1",
-    "motion": "^10.16.2",
-    "sharp": "^0.32.5",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.5"
+    "@astrojs/mdx": "^2.3.0",
+    "@astrojs/partytown": "^2.0.4",
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/inter": "^5.0.17",
+    "@fontsource/nunito": "^5.0.17",
+    "@iconify-json/cib": "^1.1.8",
+    "@iconify-json/codicon": "^1.1.46",
+    "@iconify-json/fa-brands": "^1.1.8",
+    "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/mdi": "^1.1.66",
+    "@iconify-json/mi": "^1.1.8",
+    "@iconify-json/uil": "^1.1.8",
+    "astro": "^4.6.1",
+    "astro-icon": "^1.1.0",
+    "motion": "^10.17.0",
+    "sharp": "^0.33.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.12"
   }
 }
