--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.3.0",
-    "@astrojs/partytown": "^2.0.4",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/mdx": "^3.1.5",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/ts-plugin": "^1.10.1",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/nunito": "^5.0.17",
     "@iconify-json/cib": "^1.1.8",
@@ -24,14 +26,15 @@
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/mi": "^1.1.8",
     "@iconify-json/uil": "^1.1.8",
-    "astro": "^4.6.1",
-    "astro-icon": "^1.1.0",
+    "astro": "^4.15.1",
+    "astro-icon": "^1.1.1",
     "motion": "^10.17.0",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12"
+    "@tailwindcss/typography": "^0.5.12",
+    "typescript": "^5.5.4"
   }
 }
