--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@astrojs/partytown": "^2.1.2",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.3",
     "@astrojs/ts-plugin": "^1.10.4",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/nunito": "^5.0.17",
@@ -26,15 +25,18 @@
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/mi": "^1.1.8",
     "@iconify-json/uil": "^1.1.8",
+    "@tailwindcss/vite": "4.0.0-beta.6",
     "astro": "^5.0.3",
     "astro-icon": "^1.1.1",
     "motion": "^10.17.0",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "4.0.0-beta.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@9.9.0"
