--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/mi": "^1.1.8",
     "@iconify-json/uil": "^1.1.8",
+    "@tailwindcss/vite": "4.0.0-beta.6",
     "astro": "^5.0.3",
     "astro-icon": "^1.1.1",
     "motion": "^10.17.0",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss": "3.4.16"
+    "tailwindcss": "4.0.0-beta.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
