--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/mi": "^1.1.8",
     "@iconify-json/uil": "^1.1.8",
-    "@tailwindcss/vite": "4.0.0-beta.6",
+    "@tailwindcss/vite": "^4.0.9",
     "astro": "^5.0.3",
     "astro-icon": "^1.1.1",
     "motion": "^10.17.0",
@@ -34,7 +34,7 @@
     "tailwindcss": "4.0.0-beta.6"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
+    "@tailwindcss/typography": "^0.5.16",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "typescript": "^5.7.2"
